--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <ul class="nav-menu">
                         <li><a href="#home">Home</a></li>
                         <li><a href="#about">About</a></li>
-                        <li><a href="services.html">Services</a></li>
+                        <li><a href="services.html">Tournaments</a></li>
                         <li><a href="reviews.html">Reviews</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="myaccount.html">Acc</a></li>
@@ -144,7 +144,7 @@
         <div class="clearfix"></div>
         <!-- End Banner Wrapper -->
         <footer>
-            <p>&copy; Nistreanu Daniel 2017.</p>
+            <p>&copy; TOM AND LUNATIC 2017</p>
         </footer>
       <script src="js/slider.js">
       </script>  
