--- a/services.html
+++ b/services.html
@@ -19,12 +19,12 @@
     <div class="nav-outer">
         <div class="nav-wrap">
             <nav class="navigation">
-                <div class="logo"><a href="index.html"><img src="img/logo.jpg"></a></div>
+                <div class="logo"><a href="index.html"><img src="img/logo.png"></a></div>
                 <div class='nav' nav-menu-style="yoga">
                     <ul class="nav-menu">
                         <li><a href="index.html#home">Home</a></li>
                         <li><a href="index.html#about">About</a></li>
-                        <li><a href="services.html">Services</a></li>
+                        <li><a href="services.html">Tournaments</a></li>
                         <li><a href="reviews.html">Reviews</a></li>
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="myaccount.html">Acc</a></li>
@@ -34,11 +34,12 @@
         </div>
     </div>
         <div class="nav-clear"></div>
-        <h1 style="padding: 15% 0 7.5% 0">Services page is under development.</h1>
+        <h1 style="padding: 15% 0 7.5% 0"></h1>
         <div class="clearfix"></div>
 
         <footer id="footer-custom">
-            <p>&copy; GameZone WebSite 2017.</p>
+            <p>&copy; TomandLunatic
+            </p>
         </footer>
 
 </body>
