--- a/services.html
+++ b/services.html
@@ -34,7 +34,7 @@
         </div>
     </div>
         <div class="nav-clear"></div>
-        <h1 style="padding: 15% 0 7.5% 0"><img src="tr1.jpg" alt=""></h1>
+        <h1 style="align: left"><img src="img\tr1.jpg" style="height: 300px; width: 400px; align-self: left"></h1>
         <div class="clearfix"></div>
 
         <footer id="footer-custom">
