--- a/services.html
+++ b/services.html
@@ -34,8 +34,17 @@
         </div>
     </div>
         <div class="nav-clear"></div>
-        <h1 style="align: left"><img src="img\tr1.jpg" style="height: 300px; width: 400px; align-self: left"></h1>
-        <div class="clearfix"></div>
+        <div class="split left">
+            <div class="centered">
+              <img src="img\tr1.jpg" alt="Avatar woman">
+            </div>
+          </div>
+          
+          <div class="split right">
+            <div class="centered">
+              <img src="img\tr2.jpg" alt="Avatar man">
+            </div>
+          </div>
 
         <footer id="footer-custom">
             <p>&copy; TomandLunatic
